Cibyl (12)
	* Fixed a bug where the first basic block of a function was by
	mistake made empty (this nullified the skip-stack-stores
	optimization). The bug fix will make generated code slightly smaller.

	-- Simon Kagstrom <simon.kagstrom@gmail.com>

Cibyl (11)
	* The size of the operand stack is now dynamically set depending
	on the instructions used by the recompiled method. An option has
	also been added to allow manual setting of this size.

	* The peephole optimizer has been improved to catch a few more
	cases

	* The mult and div instructions are now always handled inlined and
	the runtime functions multu and divu return a long result. This
	allows the MIPS hi/lo registers to be represented as normal Java
	local registers, which will be needed for future threading
	implementations. It might also improve performance in some cases

	* Implemented catching of exceptions in C with the
	NOPH_try(handler, arg) / NOPH_catch() pair. The use of
	NOPH_exception is now deprecated and should be replaced with
	NOPH_try/NOPH_catch pairs.

	* Fixed bug in jalr and jal where the destination registers were
	wrong

	* Switched to manage the project at google code,
	http://cibyl.googlecode.com, the subversion repository is at
	http://cibyl.googlecode.com/svn/

	* Implemented the option --optimize-indirect-calls, which provides
	a more compact global jumptab (containing only those functions
	which are used through function pointers instead of all
	functions). This significantly reduces the size of most
	applications.

	* The test application now outputs on a console, which allows it
	to run on real phones. Also reduced the output generated and
	renamed the application.

	* Fixed Font.charWidth() with a non-generated implementation

	* Optimized the cleanup register generation (fewer registers are
	now cleaned)

	* Fixed a bug in __fixunssfsi_helper.java where values above or
	equal to 1^32 were incorrectly handled (truncated)
